QR scan improvement

--- a/_includes/search_bar.html
+++ b/_includes/search_bar.html
@@ -6,12 +6,8 @@
     </svg>
   </div>
 
-  <div class="md:flex md:flex-auto hidden">
-    <input type="text" id="search-input" placeholder="Search the Binder" size="3" class="flex-auto h-12 bg-white border-2 px-2 py-2 rounded-md whitespace-nowrap">
-  </div>
-
-  <div class="flex flex-auto md:hidden">
-    <input type="text" id="search-input" placeholder="Search" size="3" class="flex-auto h-12 bg-white border-2 px-2 py-2 rounded-md whitespace-nowrap">
+  <div class="flex flex-auto">
+    <input type="text" id="search-input" size="3" class="flex-auto h-12 bg-white border-2 px-2 py-2 rounded-md whitespace-nowrap">
   </div>
 
 </div>
