--- a/_includes/qr_scanner.html
+++ b/_includes/qr_scanner.html
@@ -1,6 +1,6 @@
 <div class="z-50 fixed w-full md:w-auto top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 mt-1">
-  <video id="video" class="aspect-video w-full h-auto" x-show="showScanner" x-transition style="display:none;"></video>
-  <canvas id="canvas" class="aspect-video w-full h-auto" style="display:none;"></canvas>
+  <video id="video" class="w-full h-auto" x-show="showScanner" x-transition style="display:none;"></video>
+  <canvas id="canvas" class="w-full h-auto" style="display:none;"></canvas>
 
   <script>
     // Access the video and canvas elements
@@ -24,6 +24,35 @@
           });
       }
     }
+    // Get the image data
+    let imageData = context.getImageData(0, 0, canvas.width, canvas.height);
+
+    // Apply noise reduction filter
+    for (let i = 0; i < imageData.data.length; i += 4) {
+        let red = imageData.data[i];
+        let green = imageData.data[i + 1];
+        let blue = imageData.data[i + 2];
+
+        // Apply a simple noise reduction filter
+        imageData.data[i] = Math.round((red + green + blue) / 3);
+        imageData.data[i + 1] = Math.round((red + green + blue) / 3);
+        imageData.data[i + 2] = Math.round((red + green + blue) / 3);
+    }
+
+    // Adjust contrast
+    for (let i = 0; i < imageData.data.length; i += 4) {
+        let red = imageData.data[i];
+        let green = imageData.data[i + 1];
+        let blue = imageData.data[i + 2];
+
+        // Apply a contrast enhancement filter
+        imageData.data[i] = red * 1.5; // Increase the contrast
+        imageData.data[i + 1] = green * 1.5;
+        imageData.data[i + 2] = blue * 1.5;
+    }
+
+    // Put the image data back to the canvas
+    context.putImageData(imageData, 0, 0);
     // Function to scan for QR codes
     function scan() {
       if (video.readyState === video.HAVE_ENOUGH_DATA) {
