--- a/_includes/search_bar_link.html
+++ b/_includes/search_bar_link.html
@@ -6,12 +6,11 @@
     </svg>
   </a>
 
-  <div class="md:flex md:flex-auto hidden">
-    <a href="./search.html" class="flex-auto h-12 bg-white border-2 px-2 py-2 rounded-md"><span class="text-gray-400 whitespace-nowrap">Search the Binder</span></a>
-  </div>
-
-  <div class="flex flex-auto md:hidden">
-    <a href="./search.html" class="flex-auto h-12 bg-white border-2 px-2 py-2 rounded-md"><span class="text-gray-400 whitespace-nowrap">Search</span></a>
+  <div class="flex flex-auto">
+    <a href="./search.html" class="flex-auto h-12 bg-white border-2 px-2 py-2 rounded-md">
+      <span class="text-gray-400 whitespace-nowrap hidden md:block">Search Binder</span>
+      <span class="text-gray-400 whitespace-nowrap md:hidden">Search</span>
+    </a>
   </div>
 
 </div>
