--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,6 +58,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/intersect@3.x.x/dist/cdn.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <script src=" https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js "></script>
+    <script src="https://cdn.jsdelivr.net/npm/opencv@7.0.0/lib/opencv.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.js" integrity="sha512-is1ls2rgwpFZyixqKFEExPHVUUL+pPkBEPw47s/6NDQ4n1m6T/ySeDW3p54jp45z2EJ0RSOgilqee1WhtelXfA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
       if (typeof navigator.serviceWorker !== 'undefined') {
@@ -73,16 +74,24 @@
             startScanning(true);
           </script>
       </template>
+
       <div class="absolute inset-0 bg-slate-300 opacity-75"></div>
       <div class="bg-amber-50 z-50 p-6 rounded-lg shadow-xl w-full max-w-lg">
         <h2 class="text-xl font-semibold mb-4">Privacy Notice</h2>
-        <p class="mb-4 text-kip-drk-sienna">By allowing camera access to our QR code scanner, you agree to our <a href="/privacy_policy" class="text-kip-red hover:text-emerald-600" @click="showModal = false">privacy policy</a>. Breath easy, we don't collect any data.</p>
+        <p class="mb-4 text-kip-drk-sienna">
+          By allowing camera access to our QR code scanner, you agree to our
+          <a href="/privacy_policy" class="text-kip-red hover:text-emerald-600" @click="showModal = false">privacy policy</a>.
+           Breath easy, we don't collect any data.
+        </p>
+
         <button @click="acceptPrivacy = true; noCamera = false; showModal = false; startScanning(true)" class="bg-kip-red hover:bg-emerald-600 text-amber-50 font-bold py-2 px-4 rounded">
           Accept & Continue
         </button>
+
         <button @click="noCamera = true; showModal = false" class="bg-kip-red hover:bg-emerald-600 text-amber-50 font-bold py-2 px-4 rounded">
           Don't Need It
         </button>
+
       </div>
     </div>
 
