--- a/_includes/qr_scanner.html
+++ b/_includes/qr_scanner.html
@@ -1,5 +1,5 @@
 <div class="z-50 fixed w-full md:w-auto top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 mt-1 max-h-96">
-  <video id="video" class="w-full h-auto max-h-96 scale-y-[-1]" x-show="showScanner" x-transition style="display:none;"></video>
+  <video id="video" class="w-full h-auto max-h-96 scale-[-1]" x-show="showScanner" x-transition style="display:none;"></video>
   <canvas id="canvas" class="w-full h-auto max-h-96" style="display:none;"></canvas>
 
   <script>
