--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -98,5 +98,6 @@
       <div class="absolute top-0 w-screen h-0" x-intersect:leave="terrab = false" x-intersect="terrab = true"></div>
       {{ content }}
     </div>
+    <script async src="opencv.js" type="text/javascript"></script>
   </body>
 </html>
