--- a/_includes/qr_scanner.html
+++ b/_includes/qr_scanner.html
@@ -1,16 +1,20 @@
-<canvas id="canvas" class="z-50 fixed w-96 h-96 -translate-x-1/2 -translate-y-1/2 scale-x-[-1] top-1/2 left-1/2" style="display:none;"></canvas>
-<video id="video" class="z-50 fixed w-96 h-96 -translate-x-1/2 -translate-y-1/2 scale-x-[-1] top-1/2 left-1/2" x-show="showScanner" style="display:block;"></video>
-
+<canvas id="canvas" class="z-40 fixed -translate-x-1/2 -translate-y-1/2 scale-x-[-1] top-1/2 left-1/2" x-show="showScanner" style="display:none;"></canvas>
+<video id="video" class="z-30 fixed -translate-x-1/2 -translate-y-1/2 scale-x-[-1] top-1/2 left-1/2" x-show="showScanner" style="display:none;"></video>
+<canvas id="debugCanvas" ></canvas>
 
 <script>
   // Access the video and canvas elements
   const video = document.getElementById('video');
   const canvas = document.getElementById('canvas');
   const context = canvas.getContext('2d');
+  const debugCanvas = document.createElement('canvas');
+  debugCanvas.width = 256;
+  debugCanvas.height = 128;
+  const debugContext = debugCanvas.getContext('2d');
 
   // Function to start scanning for QR codes
-  function startScanning(showModal) {
-    if (showModal) {
+  function startScanning(consent) {
+    if (consent) {
       // Get access to the camera
       navigator.mediaDevices.getUserMedia({ video: { facingMode: 'user' } })
         .then(function(stream) {
@@ -25,28 +29,67 @@
     }
   }
 
+  function preProcess() {
+      context.drawImage(video, 0, 0, 300, 150);
+      const imageData = context.getImageData(0, 0, 300, 150);
+
+      let src = cv.imread('canvas')
+      //cv.imshow('debugCanvas', src)
+      let grayMat = new cv.Mat(imageData.height, imageData.width, cv.CV_8UC1);
+      cv.cvtColor(src, grayMat, cv.COLOR_RGBA2GRAY, 0);
+
+      // Apply Canny Edge Detection for better line detection
+      let cannyMat = new cv.Mat();
+      cv.Canny(grayMat, cannyMat, 50, 150);
+
+      // Perform Hough Line Transform to detect lines in the image
+      let lines = new cv.Mat();
+      let rho = 1;
+      let theta = Math.PI / 180;
+      let threshold = 100;
+      let minLineLength = 10;
+      let maxLineGap = 10;
+      cv.HoughLinesP(cannyMat, lines, rho, theta, threshold, minLineLength, maxLineGap);
+
+      // Draw detected lines on the image
+      for (let i = 0; i < lines.rows; ++i) {
+          let lineData = lines.data32S[i * 4];
+          let x1 = lineData[0], y1 = lineData[1], x2 = lineData[2], y2 = lineData[3];
+          cv.line(src, new cv.Point(x1, y1), new cv.Point(x2, y2), [255, 0, 0, 255]);
+      }
+
+      // Convert processed image back to grayscale for QR code scanning
+
+      let finalGrayMat = new cv.Mat();
+      cv.cvtColor(src, finalGrayMat, cv.COLOR_RGBA2GRAY);
+
+      cv.imshow('canvas', finalGrayMat);
+      const resultImg = context.getImageData(0, 0, 300, 150)
+
+      return resultImg;
+  }
+
   // Function to scan for QR codes
   function scan() {
     if (video.readyState === video.HAVE_ENOUGH_DATA) {
-      context.drawImage(video, 0, 0, 300, 200);
-      const imageData = context.getImageData(0, 0, 300, 200);
-      const code = jsQR(imageData.data, imageData.width, imageData.height, {
-        inversionAttempts: "attemptBoth", // or "tryInvertedFirst"
-      });
+    const preProcessedImage = preProcess();
+
+    const code = jsQR(preProcessedImage.data, preProcessedImage.width, preProcessedImage.height, {
+      inversionAttempts: "dontInvert", // as recommended by jsQR
+    });
+    if (code) {
+      console.log('QR code detected:', code.data);
       if (code) {
-        console.log('QR code detected:', code.data);
-        if (code) {
-          // Assuming your QR codes contain URLs starting with "http://" or "https://"
-          const url = code.data;
-          // Check if the URL starts with "http://" or "https://"
-          if (url.startsWith('http://') || url.startsWith('https://')) {
-            // Navigate to the URL on your local server (assuming your local server's address is "http://127.0.0.1:4000/")
-            window.location.href = url.replace('http://', 'http://www.kpks.us/'); //'http://127.0.0.1:4000/');
-          } else {
-            console.log('Invalid URL detected in QR code');
-          }
+        const url = code.data;
+        // Check if the URL starts with "http://" or "https://"
+        if (url.startsWith('http://') || url.startsWith('https://')) {
+          // Navigate to the URL on your local server (assuming your local server's address is "http://127.0.0.1:4000/")
+          window.location.href = url.replace('http://', 'https://www.kpks.us/'); //'http://127.0.0.1:4000/');
+        } else {
+          console.log('Invalid URL detected in QR code');
         }
       }
+    }
     }
     requestAnimationFrame(scan);
   }
