--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,47 +1,48 @@
-<div x-data="{ open: false }" class="z-40 flex px-5 py-1 gap-x-4 flex-wrap sticky top-0 bg-emerald-50/95" :class="{ 'bg-hero-pattern': terrab }">
-  <div class="flex basis-full md:hidden break-after-right md:break-after-avoid transition hover:scale-105 active:scale-95" :class="{ 'hidden': open }" x-transition.duration.300 x-show="terrab">
-    <a href="./" class="flex flex-1 place-content-center md:hidden h-28 w-52" title="Binder Home" x-transition.duration.300 x-show="terrab">
-      <img class="h-28 w-52" src="/assets/images/kipukas_complete_card_collection.webp" alt="Kipukas Complete Card Collection"></img>
-    </a>
-  </div>
-
-  <div class="hidden md:block break-after-avoid transition hover:scale-105 active:scale-95">
-    <a href="./" class="hidden md:block h-32 w-60" title="Binder Home">
-      <img class="h-32 w-60" src="/assets/images/kipukas_complete_card_collection.webp" alt="Kipukas Complete Card Collection"></img>
-    </a>
-  </div>
-
-  {% unless page.search %}
-    <div class="flex-1"></div>
-  {% endunless %}
-
-  {% if page.search %}
-    {% include {{ page.search }} %}
-    {% include qr_button.html %}
-  {% endif %}
-
-  <div class="hidden lg:flex flex-initial gap-x-4 px-5 content-center justify-end">
-    <a class="{{ site.data.templates.btn-center }}" href="./kipukas_2_player_domination.pdf">See the Rules</a>
-    <a class="{{ site.data.templates.btn-center }}" href="./about_the_binder">About the Binder</a>
-  </div>
-
-
-  <div class="py-3 px-3 flex flex-initial justify-end content-center self-center lg:hidden">
-    <div x-show="open" x-transition.duration.350ms class="fixed left-0 top-0 bottom-0 right-0 h-screen w-screen bg-amber-50 p-5 grid grid-cols-1 place-content-center">
-        <a href="./" class="self-center p-6 text-center text-xl text-kip-drk-goldenrod rounded-lg hover:bg-amber-100 active:bg-amber-100">Binder Home</a>
-        <a href="./kipukas_2_player_domination.pdf" class="self-center p-6 text-center text-xl text-kip-drk-goldenrod rounded-lg hover:bg-amber-100 active:bg-amber-100">See the Rules</a>
-        <a href="./about_the_binder" class="self-center p-6 text-center text-xl text-kip-drk-goldenrod rounded-lg hover:bg-amber-100 active:bg-amber-100">About the Binder</a>
+<template x-if="true"> <!--This template makes sure the modal does not display when unneeded-->
+  <div x-data="{ open: false }" class="z-40 flex px-5 py-1 gap-x-4 flex-wrap sticky top-0 bg-emerald-50/95" :class="{ 'bg-hero-pattern': terrab }">
+    <div class="flex basis-full md:hidden break-after-right md:break-after-avoid transition hover:scale-105 active:scale-95" :class="{ 'hidden': open }" x-transition.duration.300 x-show="terrab">
+      <a href="./" class="flex flex-1 place-content-center md:hidden h-28 w-52" title="Binder Home" x-transition.duration.300 x-show="terrab">
+        <img class="h-28 w-52" src="/assets/images/kipukas_complete_card_collection.webp" alt="Kipukas Complete Card Collection"></img>
+      </a>
     </div>
 
-    <button class="hover:bg-amber-100 active:bg-amber-100 text-kip-drk-goldenrod w-12 h-12 relative bg-amber-50 rounded-lg" @click="open = !open" :class="{'shadow-lg': ! open}">
-        <span class="sr-only">Open main menu</span>
-        <div class="block w-5 absolute left-1/2 top-1/2  transform  -translate-x-1/2 -translate-y-1/2">
-            <span class="block absolute h-0.5 w-6 bg-current transform transition duration-500 ease-in-out" :class="{'rotate-45': open,' -translate-y-1.5': !open }"></span>
-            <span class="block absolute  h-0.5 w-6 bg-current transform transition duration-500 ease-in-out" :class="{'opacity-0': open } "></span>
-            <span class="block absolute  h-0.5 w-6 bg-current transform  transition duration-500 ease-in-out" :class="{'-rotate-45': open, ' translate-y-1.5': !open}"></span>
-        </div>
-    </button>
-  </div>
-</div>
+    <div class="hidden md:block break-after-avoid transition hover:scale-105 active:scale-95">
+      <a href="./" class="hidden md:block h-32 w-60" title="Binder Home">
+        <img class="h-32 w-60" src="/assets/images/kipukas_complete_card_collection.webp" alt="Kipukas Complete Card Collection"></img>
+      </a>
+    </div>
 
+    {% unless page.search %}
+      <div class="flex-1"></div>
+    {% endunless %}
+
+    {% if page.search %}
+      {% include {{ page.search }} %}
+      {% include qr_button.html %}
+    {% endif %}
+
+    <div class="hidden lg:flex flex-initial gap-x-4 px-5 content-center justify-end">
+      <a class="{{ site.data.templates.btn-center }}" href="./kipukas_2_player_domination.pdf">See the Rules</a>
+      <a class="{{ site.data.templates.btn-center }}" href="./about_the_binder">About the Binder</a>
+    </div>
+
+
+    <div class="py-3 px-3 flex flex-initial justify-end content-center self-center lg:hidden">
+      <div x-show="open" x-transition.duration.350ms class="fixed left-0 top-0 bottom-0 right-0 h-screen w-screen bg-amber-50 p-5 grid grid-cols-1 place-content-center">
+          <a href="./" class="self-center p-6 text-center text-xl text-kip-drk-goldenrod rounded-lg hover:bg-amber-100 active:bg-amber-100">Binder Home</a>
+          <a href="./kipukas_2_player_domination.pdf" class="self-center p-6 text-center text-xl text-kip-drk-goldenrod rounded-lg hover:bg-amber-100 active:bg-amber-100">See the Rules</a>
+          <a href="./about_the_binder" class="self-center p-6 text-center text-xl text-kip-drk-goldenrod rounded-lg hover:bg-amber-100 active:bg-amber-100">About the Binder</a>
+      </div>
+
+      <button class="hover:bg-amber-100 active:bg-amber-100 text-kip-drk-goldenrod w-12 h-12 relative bg-amber-50 rounded-lg" @click="open = !open" :class="{'shadow-lg': ! open}">
+          <span class="sr-only">Open main menu</span>
+          <div class="block w-5 absolute left-1/2 top-1/2  transform  -translate-x-1/2 -translate-y-1/2">
+              <span class="block absolute h-0.5 w-6 bg-current transform transition duration-500 ease-in-out" :class="{'rotate-45': open,' -translate-y-1.5': !open }"></span>
+              <span class="block absolute  h-0.5 w-6 bg-current transform transition duration-500 ease-in-out" :class="{'opacity-0': open } "></span>
+              <span class="block absolute  h-0.5 w-6 bg-current transform  transition duration-500 ease-in-out" :class="{'-rotate-45': open, ' translate-y-1.5': !open}"></span>
+          </div>
+      </button>
+    </div>
+  </div>
+</template>
 {% include qr_scanner.html %}
