Add showCardInfo function

--- a/_includes/qr_modal.html
+++ b/_includes/qr_modal.html
@@ -1,4 +1,4 @@
-<div x-data="{ acceptPrivacy: $persist(false) }" x-show="showModal" class="fixed inset-0 flex items-center justify-center z-50">
+<div x-show="showModal" class="fixed inset-0 flex items-center justify-center z-50">
 
   <template x-if="true"> <!--This template makes sure the modal does not display when unneeded-->
     <div class="absolute inset-0 bg-slate-300 opacity-75"></div>
