--- a/_includes/search_bar.html
+++ b/_includes/search_bar.html
@@ -7,7 +7,7 @@
   </div>
 
   <div class="flex flex-auto">
-    <input type="text" id="search-input" size="3" class="flex-auto h-12 bg-white border-2 px-2 py-2 rounded-md whitespace-nowrap">
+    <input type="text" id="search-input" size="3" autofocus class="flex-auto h-12 bg-white border-2 px-2 py-2 rounded-md whitespace-nowrap">
   </div>
 
 </div>
