--- a/_includes/qr_modal.html
+++ b/_includes/qr_modal.html
@@ -17,7 +17,7 @@
         Accept & Continue
       </button>
 
-      <button @click="noCamera = true; showModal = false" class="bg-kip-red hover:bg-emerald-600 text-amber-50 font-bold py-2 px-4 rounded">
+      <button @click="noCamera = true; showModal = false; showScanner = false;" class="bg-kip-red hover:bg-emerald-600 text-amber-50 font-bold py-2 px-4 rounded">
         Don't Need It
       </button>
     </div>
