Replace jsQR with zbar-wasm

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,6 +85,8 @@
       <div class="absolute top-0 w-screen h-0" x-intersect:leave="terrab = false" x-intersect="terrab = true"></div>
       {{ content }}
     </div>
+
     <script src="/opencv.js" type="text/javascript" onload="console.log('opencv.js ready')"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@undecaf/zbar-wasm@0.10.1/dist/index.js"></script>
   </body>
 </html>
