--- a/_includes/qr_scanner.html
+++ b/_includes/qr_scanner.html
@@ -88,27 +88,28 @@
   }
 
   // Function to scan for QR codes
-  function scan() {
+  async function scan() {
     if (video.readyState === video.HAVE_ENOUGH_DATA) {
-    const preProcessedImage = preProcess();
+      const preProcessedImage = preProcess();
 
-    const code = jsQR(preProcessedImage.data, preProcessedImage.width, preProcessedImage.height, {
-      inversionAttempts: "dontInvert", // as recommended by jsQR
-    });
-
-    if (code) {
-      console.log('QR code detected:', code.data);
-      if (code) {
-        const url = code.data;
-        // Check if the URL starts with "http://" or "https://"
-        if (url.startsWith('http://') || url.startsWith('https://')) {
-          // Navigate to the URL on your local server (assuming your local server's address is "http://127.0.0.1:4000/")
-          window.location.href = url.replace('http://', 'https://www.kpks.us/'); //'http://127.0.0.1:4000/');
-        } else {
-          console.log('Invalid URL detected in QR code');
+      const symbols = await zbarWasm.scanImageData(preProcessedImage);
+      symbols.forEach(s => s.rawValue = s.decode('utf-8'));
+      symbols.forEach(symbol => {
+        code = symbol.rawValue;
+        if (code) {
+          console.log('QR code detected:', code);
+          if (code) {
+            const url = code;
+            // Check if the URL starts with "http://" or "https://"
+            if (url.startsWith('http://') || url.startsWith('https://')) {
+              // Navigate to the URL on your local server (assuming your local server's address is "http://127.0.0.1:4000/")
+              window.location.href = url.replace('http://', 'https://www.kpks.us/'); //'http://127.0.0.1:4000/');
+            } else {
+              console.log('Invalid URL detected in QR code');
+            }
+          }
         }
-      }
-    }
+      });
     }
     requestAnimationFrame(scan);
   }
