Try contrast and cache

--- a/_includes/qr_scanner.html
+++ b/_includes/qr_scanner.html
@@ -28,7 +28,7 @@
           video.srcObject = stream;
           video.setAttribute('playsinline', true); // required to tell iOS safari we don't want fullscreen
           video.play();
-          requestAnimationFrame(scan);
+          requestAnimationFrame(scanForQR);
           setTimeout(() => {
             alpinel._x_dataStack[0].videoReady = true;
           }, 300);
@@ -51,35 +51,39 @@
 
   function preProcess() {
      try {
-         context.drawImage(video, 0, 0, 300, 150);
-         const imageData = context.getImageData(0, 0, 300, 150);
+          context.drawImage(video, 0, 0, 300, 150);
+          const imageData = context.getImageData(0, 0, 300, 150);
 
-         let src = cv.imread('canvas');
-         //cv.imshow('debugCanvas', src)
-         let grayMat = new cv.Mat(imageData.height, imageData.width, cv.CV_8UC1);
-         cv.cvtColor(src, grayMat, cv.COLOR_RGBA2GRAY, 0);
-         src.delete();
-         // Perform morphological operations
-         let kernel = cv.Mat.ones(2, 2, cv.CV_8U);
-         let erodedMat = new cv.Mat();
-         cv.erode(grayMat, erodedMat, kernel);
-         grayMat.delete();
+          let src = cv.imread('canvas');
+          //cv.imshow('debugCanvas', src)
+          let grayMat = new cv.Mat(imageData.height, imageData.width, cv.CV_8UC1);
+          cv.cvtColor(src, grayMat, cv.COLOR_RGBA2GRAY, 0);
+          src.delete();
 
-         let dilatedMat = new cv.Mat();
-         cv.dilate(erodedMat, dilatedMat, kernel);
-         erodedMat.delete();
-         kernel.delete();
+          let equalized = new cv.Mat();
+          cv.equalizeHist(grayMat, equalized);
 
-         // Apply adaptive threshold
-         let thresholdMat = new cv.Mat();
-         cv.adaptiveThreshold(dilatedMat, thresholdMat, 255, cv.ADAPTIVE_THRESH_MEAN_C, cv.THRESH_BINARY, 11, 5);
-         dilatedMat.delete();
+          // Perform morphological operations
+          let kernel = cv.Mat.ones(2, 2, cv.CV_8U);
+          let erodedMat = new cv.Mat();
+          cv.erode(equalized, erodedMat, kernel);
+          grayMat.delete();
 
-         cv.imshow('canvas', thresholdMat);
-         thresholdMat.delete();
-         const resultImg = context.getImageData(0, 0, 300, 150)
+          let dilatedMat = new cv.Mat();
+          cv.dilate(erodedMat, dilatedMat, kernel);
+          erodedMat.delete();
+          kernel.delete();
 
-         return resultImg;
+          // Apply adaptive threshold
+          let thresholdMat = new cv.Mat();
+          cv.adaptiveThreshold(dilatedMat, thresholdMat, 255, cv.ADAPTIVE_THRESH_MEAN_C, cv.THRESH_BINARY, 11, 5);
+          dilatedMat.delete();
+
+          cv.imshow('canvas', thresholdMat);
+          thresholdMat.delete();
+          const resultImg = context.getImageData(0, 0, 300, 150)
+
+          return resultImg;
      }
      catch (err) {
          console.log('An error occurred:', err);
@@ -88,7 +92,7 @@
   }
 
   // Function to scan for QR codes
-  async function scan() {
+  async function scanForQR() {
     if (video.readyState === video.HAVE_ENOUGH_DATA) {
       const preProcessedImage = preProcess();
       const scanner = await zbarWasm.getDefaultScanner();
@@ -98,6 +102,7 @@
       	0 /* 0 for disable */
       );
       scanner.setConfig(zbarWasm.ZBarSymbolType.ZBAR_QRCODE, zbarWasm.ZBarConfigType.ZBAR_CFG_ENABLE, 1);
+      scanner.enableCache(true);
       const symbols = await zbarWasm.scanImageData(preProcessedImage, scanner);
       symbols.forEach(s => s.rawValue = s.decode('utf-8'));
       symbols.forEach(symbol => {
@@ -118,6 +123,6 @@
         }
       });
     }
-    requestAnimationFrame(scan);
+    requestAnimationFrame(scanForQR);
   }
 </script>
