--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,7 +81,6 @@
       <div class="absolute top-0 w-screen h-0" x-intersect:leave="terrab = false" x-intersect="terrab = true"></div>
       {{ content }}
     </div>
-
-    <script src="/opencv.js" type="text/javascript" onload="console.log('opencv.js ready')"></script>
+    <!--<script src="/opencv.js" type="text/javascript" onload="console.log('opencv.js ready')"></script>-->
   </body>
 </html>
