Polish and release

--- a/_includes/card_data_format.html
+++ b/_includes/card_data_format.html
@@ -2,8 +2,8 @@
   <p class="capitalize" >
     {{ include.data_title }}
   </p>
-  <div x-show="play_data" class="mt-1 h-0.5 w-1/2 bg-kip-red justify-self-center"></div>
-  <div x-show="play_data" class="mt-1 h-0.5 w-full bg-slate-200"></div>
+  <div x-show="play_data" class="mt-1 h-0.5 w-1/2 bg-kip-red lg:bg-slate-400 justify-self-center"></div>
+  <div x-show="play_data" class="mt-1 h-0.5 w-full bg-slate-200 lg:bg-kip-red"></div>
   <p x-show="play_data" class="text-center">
     {% assign i = false %}
     {% for item in include.play_data %}
